Use of Java JEP 424 Foreign Function & Memory API